지도 기능 추가

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="text_grey">#4C4C4C</color>
     <color name="text_light_grey">#999999</color>
+    <color name="orange">#FF6E40</color>
+    <color name="transparent_orange">#C3FF6E40</color>
 
 
 </resources>
